--- a/package.json
+++ b/package.json
@@ -38,7 +38,7 @@
     "storybook:build": "cross-env NODE_NO_WARNINGS=1 storybook build --quiet --webpack-stats-json",
     "test:unit": "cross-env NODE_NO_WARNINGS=1 jest --passWithNoTests",
     "test:unit:watch": "npm run test:unit -- --watch",
-    "test": "chmod -R a+x node_modules && npm run test:unit",
+    "test": "npm run test:unit",
     "prepare": "chmod +x ./node_modules/husky/lib/bin.js && husky install",
     "postinstall": "npx next telemetry disable"
   },
